--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </head>
   <body>
     <a-scene
-      mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/theeniolaa/dance@main/assets/targetsg.mind"
+      mindar-image="imageTargetSrc: https://cdn.jsdelivr.net/gh/theeniolaa/kelloggs@main/assets/targetsk.mind"
       embedded
       color-space="sRGB"
       renderer="colorManagement: true, physicallyCorrectLights"
@@ -53,7 +53,7 @@
       <a-assets>
         <video
           id="target-video"
-          src="https://cdn.jsdelivr.net/gh/theeniolaa/dance@main/assets/dancee.mp4"
+          src="https://cdn.jsdelivr.net/gh/theeniolaa/kelloggs@main/assets/Kelloggs.mp4"
           crossorigin="anonymous"
           loop="true"
           playsinline
